# termux-daemon

./: .classpath  .gitignore  .project  BUILD.md  COMPARISON.md  LICENSE  README.md  SERVICE  build.sh  config.sh  fetch_android.py  termux-daemon
.github/workflows/: build.yml
src/: proguard-rules.pro
src/cpp/: CMakeLists.txt  android-daemon.c  config.h.in  main.c
src/java/android/os/: ServiceManager.java
src/java/org/termux/daemon/: ActivityUtils.java  ApiServer.java  ClipboardModule.java  Config.java  ContentResolverModule.java  FakeContext.java  Logger.java  Main.java  MainActivity.java  MusicPlayerModule.java  Service.java
src/java/org/termux/daemon/module/: ClipboardManager.java  ContentResolver.java  MusicPlayer.java
src/java/org/termux/daemon/service/: ApkManager.java  ClipboardManager.java  ClipboardService.java  ContentResolver.java  MusicPlayer.java
src/java/org/termux/entry/: CLIActivity.java  CLIActivityThread.java  Cli.java
src/java/org/termux/util/: FakeContext.java  Logger.java
